--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,17 @@
 		</pluginRepository>
 	</pluginRepositories>
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.6</maven.compiler.source>
-		<maven.compiler.target>1.6</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<springframework.version>4.2.3.RELEASE</springframework.version>
+		<springsecurity.version>4.0.3.RELEASE</springsecurity.version>
+		<springdata.version>1.9.1.RELEASE</springdata.version>
+		<hibernate.version>5.0.4.Final</hibernate.version>
+		<tiles.version>3.0.5</tiles.version>
+		<mysql.connector.version>5.1.37</mysql.connector.version>
+		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.postgresql</groupId>
