--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -23,8 +23,8 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			classpath:/spring/business-context.xml classpath:/spring/data-context.xml classpath:/spring/security-context.xml
-			classpath:/spring/web-context.xml
+			classpath:/WEB_INF/spring/business-context.xml classpath:/WEB_INF/spring/data-context.xml classpath:/WEB_INF/spring/security-context.xml
+			classpath:/WEB_INF/spring/web-context.xml
 		</param-value>
 	</context-param>
 	
