--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -11,7 +11,7 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/web-context.xml</param-value>
+			<param-value>classpath:/spring/web-context.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
@@ -23,7 +23,7 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			/WEB-INF/spring/business-context.xml /WEB-INF/spring/data-context.xml /WEB-INF/spring/security-context.xml
+			classpath:/spring/business-context.xml classpath:/spring/data-context.xml classpath:/spring/security-context.xml
 		</param-value>
 	</context-param>
 	
