--- a/spring/db.properties
+++ b/spring/db.properties
@@ -1,3 +1,3 @@
-database.connection=jdbc:mysql://localhost:3306/restaurant
-database.username=admin
-database.password=admin
+database.connection=jdbc:mysql://127.2.9.2:3306/restaurant
+database.username=admin7ZahqwS
+database.password=6ZqmDbw7dJY3
