--- a/spring/db.properties
+++ b/spring/db.properties
@@ -1,3 +1,3 @@
-database.connection=jdbc:mysql://ZiM@56c45d2b7628e191270000e3-iilkevych.rhcloud.com:41246/restaurant
+database.connection=jdbc:mysql://56c45d2b7628e191270000e3-iilkevych.rhcloud.com:41246/restaurant
 database.username=adminCtVnWpS
 database.password=BrjAHJvl-ZiM
